--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 indicatif = {version = "*", optional=true}
 num = "*"
+grid = "*"
 
 [features]
 default = ["progressbar"]
