--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-indicatif = {version = "*", optional=true}
+indicatif = {version = "*", optional=true, features=["rayon"]}
+rayon = {version = "*", optional=true}
 num = "*"
 grid = "*"
 log = "*"
@@ -13,4 +14,4 @@ test-log = "*"
 
 [features]
 default = ["progressbar"]
-progressbar = ["dep:indicatif"]
+progressbar = ["dep:indicatif", "dep:rayon"]
