--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-indicatif = {version = "*", optional=true, features=["rayon"]}
-rayon = {version = "*", optional=true}
+indicatif = {version = "*", optional=true}
 num = "*"
 grid = "*"
 log = "*"
 env_logger = "*"
 test-log = "*"
+cached = "*"
 
 [features]
 default = ["progressbar"]
-progressbar = ["dep:indicatif", "dep:rayon"]
+progressbar = ["dep:indicatif"]
