refactor: use Rust 1.74's clippy config
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ test-log = "*"
 [features]
 default = ["progressbar"]
 progressbar = ["dep:indicatif"]
+
+[lints.clippy]
+all = "warn"
+pedantic = "warn"
+nursery = "warn"
