refactor: use strum for enum
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ itertools = "*"
 log = "*"
 num = "*"
 test-log = "*"
+strum = { version = "*", features = ["derive"] }
 
 [features]
 default = ["progressbar"]
