refactor: use derive_more
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 cached = "*"
+derive_more = "*"
 env_logger = "*"
 grid = "*"
 indicatif = {version = "*", optional=true}
