refactor: use derive-new
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 cached = "*"
 derive_more = "*"
+derive-new = "*"
 env_logger = "*"
 grid = "*"
 indicatif = {version = "*", optional=true}
