--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: Swatinem/rust-cache@v2
       - uses: actions/checkout@v4
       - name: Build
         run: cargo build --verbose
