refactor: use parser
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ intervallum = "*"
 itertools = "*"
 log = "*"
 num = "*"
+pest = "*"
+pest_derive = "*"
 regex = "*"
 strum = { version = "*", features = ["derive"] }
 test-log = "*"
