--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ log = "*"
 num = "*"
 pest = "*"
 pest_derive = "*"
+petgraph = "*"
 regex = "*"
 strum = { version = "*", features = ["derive"] }
 test-log = "*"
