chore: only require test-log when building tests
Signed-off-by: Henry Schreiner <henryschreineriii@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ pest_derive = "*"
 petgraph = "*"
 regex = "*"
 strum = { version = "*", features = ["derive"] }
+
+[dev-dependencies]
 test-log = "*"
 
 [features]
