--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,10 +14,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: Swatinem/rust-cache@v2
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - name: Build
-        run: cargo build --verbose
+        run: |
+          rustc --version
+          cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
       - name: Lint
