--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,14 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: Swatinem/rust-cache@v2
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
       - name: Build
-        run: |
-          rustc --version
-          cargo build --verbose
+        run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
       - name: Lint
-        run: cargo clippy -- -D warnings
-      - name: Format
-        run: cargo fmt --check
+        run: cargo clippy --all-targets -- -D warnings
+      - uses: actions-rust-lang/rustfmt@v1
